# uv-demo

./: README.md  conftest.py  pyproject.toml
api/: pet_api.py  store_api.py  user_api.py
client/: http_client.py
config/: dev.yaml  prod.yaml
testdata/pet/: get_pet.yaml
tests/: test_buttons.py  test_pets.py  test_store.py  test_user.py
utils/: logger.py  models.py  yaml_loader.py
