[project]
name = "uv-demo"
version = "0.1.1"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "faker>=40.11.0",
    "jsonschema>=4.26.0",
    "pydantic>=2.12.5",
    "pytest-html>=4.2.0",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pyyaml>=6.0.3",
    "playwright",
    "pytest-playwright",
]
